# nbml

./: Cargo.toml  README.md  TODO  build.rs
.cargo/: config.toml
examples/: attention_impl_h2h.rs  attention_test.rs  broadcast.rs  cache_test.rs  ctrnn2_sin.rs  ctrnn_lorenz.rs  ctrnn_sin.rs  dynamic_vs_static.rs  gla_associative.rs  gla_selective.rs  lsa_associative.rs  matmul.rs  ref.rs  sequence_decoder.rs  tensor.rs  tensor_bench.rs  tensor_vs_ndarray.rs  transformer_2.rs  transformer_bench.rs  transformer_vs_gla.rs  two_class.rs  vertlet_ctrnn_lorenz.rs  xor.rs
src/: f.rs  f2.rs  lib.rs  tensor.rs
src/experimental/: dense_selective_ssm.rs  linear_self_attention.rs  mod.rs
src/layers/: activations.rs  dropout.rs  embedding.rs  l2_norm.rs  layer_norm.rs  linear.rs  mod.rs  pooling.rs  sequence_pooling.rs  softmax.rs
src/modeling/: causal_lm.rs  mod.rs
src/nn/: attention.rs  attention2.rs  attention_head.rs  closure_esn.rs  conv2d.rs  delta_net.rs  esn.rs  ffn.rs  gated_delta_net.rs  gated_linear_attention.rs  gated_linear_transformer.rs  gla.rs  gla_transformer.rs  gru.rs  layernorm.rs  linear_attention.rs  linear_ssm.rs  linear_transformer.rs  ln2.rs  lsm.rs  lstm.rs  mod.rs  pad_mask.rs  pooling.rs  positionwise_ffn.rs  rnn.rs  (+5 more)
tests/: attention.rs  attention2.rs  attention_head.rs  conv2d.rs  conv2d2.rs  delta_net.rs  embedding.rs  esn.rs  ffn.rs  gated_delta_net.rs  gated_linear_attention.rs  gated_linear_attention2.rs  gated_linear_transformer.rs  gla.rs  gla_transformer.rs  grads.rs  gru.rs  l2_norm.rs  layer_norm.rs  layer_norm2.rs  layer_norm_compare.rs  linear.rs  linear2.rs  linear_attention.rs  linear_ssm.rs  linear_ssm2.rs  linear_transformer.rs  lsm.rs  lstm.rs  lstm2.rs  optim.rs  positionwise_ffn.rs  reservoir.rs  reservoirs2.rs  rnn.rs  rnn2.rs  sequence_pooling.rs  serde.rs  snn.rs  softmax.rs  (+4 more)
(+44 files in other folders)
