[package]
name = "nbml"
version = "0.2.4"
edition = "2024"
repository = "https://github.com/naatebarber/nbml"
homepage = "https://github.com/naatebarber/nbml"
license = "MIT OR Apache-2.0"
description = "Machine Learning Primitives"
readme = "README.md"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0.197", features = ["derive", "rc"] }
plotly = "0.12.1"
serde_json = "1.0.145"
serde-binary = "0.5.0"
