[package]
name = "nbml"
version = "0.3.8"
edition = "2024"
repository = "https://github.com/naatebarber/nbml"
homepage = "https://github.com/naatebarber/nbml"
license = "MIT OR Apache-2.0"
description = "Machine Learning Primitives"
readme = "README.md"

[dependencies]
ndarray = { version = "0.17.2", features = ["serde"] }
ndarray-rand = "0.16.0"
ndarray-stats = "0.7.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
plotly = "0.14.1"
serde_json = "1.0.149"
serde-binary = "0.5.0"
