[package]
name = "nbml"
version = "0.6.4"
edition = "2024"
repository = "https://github.com/naatebarber/nbml"
homepage = "https://github.com/naatebarber/nbml"
license = "MIT OR Apache-2.0"
description = "Machine Learning Primitives"
readme = "README.md"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
plotly = "0.12.1"
serde_json = "1.0.149"
serde-binary = "0.5.0"
bincode = "1.3.3"

[features]
blas = ["ndarray/blas"]

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14", features = ["accelerate"] }
